--- a/mysite/abblog/templates/abblog/index.html
+++ b/mysite/abblog/templates/abblog/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html __fvdsurfcanyoninserted="1"
 	  class=" clickberry-extension clickberry-extension-standalone clickberry-extension clickberry-extension-standalone clickberry-extension clickberry-extension-standalone"
 	  xmlns:font-style="http://www.w3.org/1999/xhtml" xmlns:style="http://www.w3.org/1999/xhtml"><head>
